--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </div>
     <div class="footer">
       <div class="links">
-        <a href="/" target="_blank">PRIVACY POLICY</a>
-        <a href="/" target="_blank" class="line">TERMS OF USE</a>
+        <a href="/protocol/privacy.html" target="_blank">PRIVACY POLICY</a>
+        <a href="/protocol/terms.html" target="_blank" class="line">TERMS OF USE</a>
         <a href="/" target="_blank">CONTACT US</a>
       </div>
       <p class="right">Copyright©2023 AiEmoji</p>
