update time and face policy

--- a/protocol/privacy.html
+++ b/protocol/privacy.html
@@ -23,7 +23,7 @@
 <body>
   <div class="inner">
     <h1>Privacy Policy</h1>
-    <p>Last Updated: 2023-03-31</p>
+    <p>Last Updated: 2023-03-24</p>
     <p><strong>Overview</strong></p>
     <p>This privacy policy ("<strong>Policy</strong>") for Aiemoji ( "<strong>we</strong>," "<strong>us</strong>,"
       or "<strong>our</strong>"), describes how and why we might collect, store, use, and/or share
@@ -42,7 +42,12 @@
       provide the complete functionality of our Service:</p>
     <ol>
       <li>Content Information, i.e. photos, pictures, <strong>facial features</strong>, password username and other
-        data - when you upload or create them using our Service, or register an account on our Service.</li>
+        data - when you upload or create them using our Service, or register an account on our Service.Facial data may
+        be extracted from the photos you upload in order to implement the composition of personalized art styles effect.
+        The extracted facial data is used to train AI models, which generate personalized art style effects that match
+        your facial features and incorporate various artistic styles. The original photo, facial data, and generated art
+        style effect will be stored temporarily in encrypted form on our server and permanently deleted after 6 months
+        of user inactivity. We do not share this data with third parties.</li>
       <li>Contact Information, i.e. name, e-mail address, as well as any other content included in the email, which
         you may fill in by yourself when you contact us via email. We use such information to respond effectively to
         your inquiry, fulfill your requests, and send you communications that you request.</li>
